--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -14,11 +14,13 @@
 *{
     margin: 0;
     padding: 5px;
+    font-family: 'Playfair Display', serif;
 }
 
 header {
     background-color: var(--color0);
     text-align: center;
+    border-radius: .5em;
 }
 
 body {
@@ -31,8 +33,13 @@ form {
     font-size: 1.2rem;
 }
 
+label {
+    font-size: 1.5rem;
+}
+
+
 button {
     border-radius: .5em;
-    background-color: var(--color1);
+    background-color: var(--color0);
     font-weight: bold;
 }
