--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -37,7 +37,6 @@ label {
     font-size: 1.5rem;
 }
 
-
 button {
     border-radius: .5em;
     background-color: var(--color5);
@@ -46,5 +45,6 @@ button {
 
 #forecast-display {
     width: 100%;
-    background-color: var(--color2);
+    background-color: var(--color0);
+    border-radius: .5em;
 }
