changed current weather display size

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -80,6 +80,10 @@ button {
     border-radius: .5em;
 }
 
+#city-input {
+    border-radius: .8em;
+}
+
 .icon {
    display: inline-block;
    width: 50; 
