--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -47,7 +47,7 @@
     /* background: radial-gradient(#FFEE57, #ca6702); */
 
     /* summer gradient */
-    background: radial-gradient(#fefae0, #bc6c25);
+    background: radial-gradient(#fefae0, #dda15e, #bc6c25);
 }
 
 *{
