updated style of current display

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -142,10 +142,6 @@ button {
     
 }
 
-#display-current-weather {
-    box-sizing: content-box;
-}
-
 #forecast-row {
     width: 85%;
 }
@@ -187,5 +183,7 @@ button {
         margin-left: 20px;   
     }
 
-
+    #forecast-row {
+        width: 100%;
+    }
 }
